Changes from 0.7.0 to 0.8.0:
 * Implement sync_token support for less overhead when syncing
 * Use XPath XML parsing instead of self-rolled functions
 * Automatically detect all addressbooks on server
 * Only use sync methods the server advertises
 * many small changes

Changes from 0.6.1 to 0.7.0:
 * merge branch: cache
 * support caching of entire addressbooks, thus speeding up repetetive queries
 * add localizations: italian, french, swedish, hungarian
 * improvements in handling multiple addressbooks
 * improvements in handling different CardDAV servers

Changes from 0.6.0 to 0.6.1:
 * merge branch: multipleaddressbooks
 * support multiple authorization header elements, patch by Michael Stilkerich
 * adapt config file and its handling to new multiple addressbook feature
 * fix FS#25 attaching photo
 * fix FS#27 use surname lastname if no nickname provided
 * fix FS#29 displayname/nickname handling

Changes from 0.4.2 to 0.6.0:
 * add group support
 * faster vcard retrieval
 * vcard parsing with library
 * support for configuration file
 * support full-featured addressbook of RC 0.6

Changes from 0.4.1 to 0.4.2:
 * add some debug entries
 * fix FS#7 - case-insensitive Authentication headers (Basic vs. basic, Digest vs. digest)

Changes from 0.4.0 to 0.4.1:
 * use PHP HTTP Client class for the whole HTTP layer handling. This speeds up processing from taking 15s to being "snappy".

Changes from 0.3.1 to 0.4.0:
 * check if PHP_VERSION >= 5.3.0 and display an error message in the preferences tab if too old.
   This is because of https://bugs.php.net/bug.php?id=46035
 * fix FS#14 - add function get_name
 * do not use + for delimiters, but _ as rcm 0.6 will substitute + for _

Changes from 0.3.0 to 0.3.1:

 * fix FS#10 - incomplete searchresults now complete
 * fixes FS#11 - do not use ob_* functions but a custom error handler to catch fopen errors
 * make password inputfield a password html-element to prevent shouldersurfing of password