@@ -16,5 +16,7 @@ $labels = Array(
 	'cd_preemptive_auth' => 'Preemptively authenticate against server. Use for ownCloud!',
 	'cd_enabled' => 'Enabled',
 	'cd_disabled' => 'Disabled',
+	'cd_lastupdate_time'=>'Time of last update',
+	'cd_resync' => "Force immediate synchronization with server",
 );
 ?>
