@@ -1,3 +1,11 @@
+Changes from 0.8.0 to x.x.x:
+ * Support X-ABCROP-RECTANGLE PHOTO parameter, provided by Dusan Maliarik
+ * Show last updated time in the settings pane and allow to force resync
+ * Fixed issue -  length of the password database field was too small
+ * incremental syncs using the sync-collection report
+ * many small changes
+ * Use Sabre VObject for vcard handling, provided by Jorge López Pérez
+
 Changes from 0.7.0 to 0.8.0:
  * Implement sync_token support for less overhead when syncing
  * Use XPath XML parsing instead of self-rolled functions
